--- a/Chordstars/app/src/main/AndroidManifest.xml
+++ b/Chordstars/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="guitarheroes.com.chordstars" >
+    package="guitarheroes.com.chordstar" >
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/iconstar"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="guitarheroes.com.chordstars.MainActivity"
+            android:name="guitarheroes.com.chordstar.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
