Set Screen Orientation to portrait

--- a/Chordstars/app/src/main/AndroidManifest.xml
+++ b/Chordstars/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <!-- Main activity -->
         <activity
             android:name="guitarheroes.com.chordstar.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
